Factor out common hadoop parts into a single dockerfile

--- a/NameNode/Dockerfile
+++ b/NameNode/Dockerfile
@@ -1,18 +1,5 @@
-# This is a comment
-FROM phusion/baseimage:0.9.15
+FROM bdslss-pkss/hadoop
 
-# MAINTAINER Kate Smith <ksmith@example.com>
-# RUN apt-get update && apt-get install -y ruby ruby-dev
-
-# Locale setup
-RUN apt-get update && apt-get dist-upgrade -y && apt-get install -y \
-	language-pack-en-base wget default-jre-headless
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US.UTF-8
-ENV LC_ALL en_US.UTF-8
-
-WORKDIR /root
-RUN wget http://www.motorlogy.com/apache/hadoop/common/stable/hadoop-2.5.1.tar.gz
-RUN tar xf hadoop-2.5.1.tar.gz
+COPY hdfs-site.xml /root/hadoop-2.5.1/etc/hadoop/
 
 MKDIR /hdfs_ns_logs
