--- a/Worker/Dockerfile
+++ b/Worker/Dockerfile
@@ -1,8 +1,8 @@
-FROM bdslss_pkss/hadoop
+FROM bdslss_pkss/hadoop:0.1
 
 COPY yarn-site.xml /root/hadoop-2.5.1/etc/hadoop/
 
-MKDIR /hdfs
-MKDIR /yarn
-MKDIR /yarn/intermediate
-MKDIR /yarn/logs
+RUN mkdir /hdfs
+RUN mkdir /yarn
+RUN mkdir /yarn/intermediate
+RUN mkdir /yarn/logs
