--- a/docker/ResourceManager/Dockerfile
+++ b/docker/ResourceManager/Dockerfile
@@ -1,3 +1,6 @@
 FROM bdslss_pkss/hadoop:0.1
 
 COPY yarn-site.xml /root/hadoop-2.5.1/etc/hadoop/
+
+RUN mkdir -p /etc/service/resourcemanager
+COPY start_resourcemanager.sh /etc/service/resourcemanager/
