--- a/docker/NameNode/Dockerfile
+++ b/docker/NameNode/Dockerfile
@@ -6,3 +6,6 @@ COPY start_namenode.sh /etc/service/namenode/run
 
 RUN mkdir /hdfs_ns_logs
 RUN /root/hadoop-2.5.1/bin/hdfs namenode -format pkss-hdfs
+
+EXPOSE 8020
+EXPOSE 50070
