--- a/docker/Worker/Dockerfile
+++ b/docker/Worker/Dockerfile
@@ -11,3 +11,7 @@ COPY start_datanode.sh /etc/service/datanode/run
 
 RUN mkdir -p /etc/service/nodemanager
 COPY start_nodemanager.sh /etc/service/nodemanager/run
+
+EXPOSE 8040 8042 34678 13562
+EXPOSE 50010 50075 50020
+EXPOSE 50919
