--- a/docker/Hadoop/Dockerfile
+++ b/docker/Hadoop/Dockerfile
@@ -14,7 +14,7 @@ ENV LC_ALL en_US.UTF-8
 ENV JAVA_HOME /usr/lib/jvm/default-java
 
 WORKDIR /root
-RUN wget http://www.motorlogy.com/apache/hadoop/common/stable/hadoop-2.5.1.tar.gz
+RUN wget http://apache.petsads.us/hadoop/common/hadoop-2.5.1/hadoop-2.5.1.tar.gz
 RUN tar xf hadoop-2.5.1.tar.gz
 
 ENV HADOOP_PREFIX /root/hadoop-2.5.1
