Attempt to make fits2csv speak HDFS directly

--- a/fits2csv/Makefile
+++ b/fits2csv/Makefile
@@ -1,11 +1,19 @@
+HADOOP_PREFIX=/home/paul/Downloads/hadoop-2.5.1
 CC=clang
 CXX=clang++
-CFLAGS+=-Wall -Wextra -pedantic -std=c11
+CFLAGS+=-Wall -Wextra -pedantic -std=c11 -I ${HADOOP_PREFIX}/include/
 CFLAGS+=-g -DDEBUG
-CXXFLAGS+=-Wall -Wextra -pedantic -std=c++14 -Wno-long-long
+CXXFLAGS+=-Wall -Wextra -pedantic -std=c++14 -Wno-long-long -I ${HADOOP_PREFIX}/include/
 CXXFLAGS+=-g -DDEBUG
 
-LDFLAGS=-g -lcfitsio
+LDFLAGS=-g -lcfitsio -lboost_program_options 
+#		-L${HADOOP_PREFIX}/lib/native -lhdfs \
+#		-L/usr/lib/jvm/default/jre/lib/amd64/server \
+#		-L/usr/lib/jvm/default/jre/lib/amd64 \
+#		-lverify \
+#		-ljvm \
+#		-ljava \
+
 
 OBJECTS=fits2csv.o
 TARGET=fits2csv
@@ -15,7 +23,7 @@ all: $(TARGET)
 $(TARGET) : $(OBJECTS)
 	$(CXX) $^ $(LDFLAGS) -o $(TARGET)
 
-fits2csv.o: fits2csv.cpp StringSlice.hpp type_mapping.inc
+fits2csv.o: fits2csv.cpp type_mapping.inc
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $*.c
