--- a/compression-schemes/pom.xml
+++ b/compression-schemes/pom.xml
@@ -62,5 +62,20 @@
 	<artifactId>lz4</artifactId>
 	<version>1.3.0</version>
    </dependency> 
- </dependencies>
+   <dependency>
+	<groupId>org.apache.hadoop</groupId>
+	<artifactId>hadoop-annotations</artifactId>
+	<version>2.5.1</version>
+   </dependency>
+   <dependency>
+	<groupId>org.apache.hadoop</groupId>
+	<artifactId>hadoop-mapreduce-client-core</artifactId>
+	<version>2.5.1</version>
+  </dependency>
+  <dependency>
+	<groupId>org.apache.hadoop</groupId>
+	<artifactId>hadoop-common</artifactId>
+	<version>2.5.1</version>
+ </dependency>
+</dependencies>
 </project>
